bootstrap/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: tactil5g-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.argoproj.int
    http:
#      paths:
#      - pathType: Prefix
#        path: /
#        backend:
#          service:
#            name: argogrpc
#            port:
#              number: 443
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: https
  tls:
   - hosts:
       - argocd.argoproj.int
     secretName: tls-argocd
